--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <br><p>
     <div id="main" class="container section">
-      <h1><b>15-110: Principles of Computing (Spring 2021)</b></h1>
+      <h1><b>15-110: Principles of Computing (Fall 2021)</b></h1>
       <img class="img-thumbnail float-right ml-4" style="margin-top: 50px; width:600px" alt="CS quote" src="cover-o.png">
       <p class="text-justify">
       <h2><b>Overview</b></h2>
@@ -191,15 +191,15 @@
         <tbody>
           <tr>
             <td> Sundays and Tuesdays </td>
-            <td> 13:30 to 14:50 </td>
-            <td> ONLINE </td>
+            <td> 14:30 to 15:45 </td>
+            <td> Room 2163 </td>
             <td> <span class="badge badge-secondary">lectures</span> </td>
           </tr>
           <tr>
             <td> Thursdays </td>
-            <td> 13:30 to 14:50 </td>
-            <td> In-presence, 1064 </td>
-            <td> <span class="badge badge-secondary">labs</span> </td>
+            <td> 14:30 to 15:45 </td>
+            <td> Room 2163 </td>
+            <td> <span class="badge badge-secondary">labs + quizzes</span> </td>
           </tr>
         </tbody>
       </table>
@@ -221,7 +221,7 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Gianni Di Caro (instructor)</div>
+            <div class="card-header">Gianni Di Caro (Teacher)</div>
             <div class="card-body">
               <p class="card-text">
               Office: 1007 <br>
@@ -250,33 +250,30 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Samar Rahmouni (CA)</div>
+            <div class="card-header">Rama Sulaiman (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: Zoom <br>
+              Office: ARC/Zoom <br>
               Office hours: <br>
               <ul>
-                <li> Tuesday: 15:00 - 16:00 </li>
-		<li>  Wednesday: 14:00 - 15:00 </li>
-                <li>  Wednesday: 18:00 - 19:00 </li>
+                <li> Day: xx:00 - yy:00 </li>
               </ul>
-              E-mail: <a href="mailto:srahmoun@andrew.cmu.edu">srahmoun@andrew.cmu.edu</a>
+              E-mail: <a href="mailto: rsulaima@andrew.cmu.edu">rsulaima@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header"> Jawaria Abbas (CA)</div>
+            <div class="card-header">Danagul Azimzhanova (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: Zoom <br>
+              Office: ARC/Zoom <br>
               Office hours: <br>
               <ul>
-		<li> Monday: 13:30 - 15:00 </li>
-		<li> Wednesday: 13:30 - 15:00 </li>
+                <li> Day: xx:00 - yy:00 </li>
               </ul>
-              E-mail: <a href="mailto:jabbas@andrew.cmu.edu">jabbas@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:dazimzha@andrew.cmu.edu">dazimzha@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
@@ -286,15 +283,15 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Yusuf Saquib (CA)</div>
+            <div class="card-header">Andrei-Horia Pacurar (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: Zoom <br>
+              Office: ARC/Zoom <br>
               Office hours: <br>
               <ul>
-		<li> Sunday, Tuesday, Thursday: 17:00 - 18:00  </li>
+		<li> Day: xx:00 - yy:00  </li>
               </ul>
-              E-mail: <a href="mailto:yusufsaquib@cmu.edu">yusufsaquib@cmu.edu</a>
+              E-mail: <a href="mailto:apacurar@andrew.cmu.edu"> apacurar@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
@@ -304,11 +301,10 @@
             <div class="card-header">Demetre Devidze (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: Zoom <br>
+              Office: ARC/Zoom <br>
               Office hours: <br>
               <ul>
-		<li> Sunday: 12:00 - 13:30 </li>
-		<li> Monday: 18:30 - 20:00 </li>				
+		<li> Day: xx:00 - yy:30 </li>
               </ul>
               E-mail: <a href="mailto:ddevidze@andrew.cmu.edu">ddevidze@andrew.cmu.edu</a>
               </p>
@@ -320,30 +316,30 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Diram Tabaa (CA)</div>
+            <div class="card-header">Temoor Tanveer (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: Zoom <br>
+              Office: ARC/Zoom <br>
               Office hours: <br>
               <ul>
-                <li> Sunday: 19:00 - 21:00 </li>
-		<li> Wednesday: 10:30 - 11:30 </li>				
+                <li> Day: xx:00 - yy:00 </li>
               </ul>
-              E-mail: <a href="mailto:dtabaa@andrew.cmu.edu">dtabaa@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:ttanveer@andrew.cmu.edu">ttanveer@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
 	<div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Zhijie Xu (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: ARC <br>
+              Office: ARC/Zoom <br>
               Office hours: <br>
               <ul>
+		<li> Day: xx:00 - yy:00 </li>
               </ul>
-              E-mail: <a href="mailto:"></a>
+              E-mail: <a href="mailto:zhijiex@andrew.cmu.edu"> zhijiex@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
@@ -410,13 +406,13 @@
       <h3>Submitting the Assignments</h3>
 
       <p>
-        You need to submit a <code>zip</code> file containing the completed
+        You need to submit a <code>.py</code> or a <code>zip<code> file containing the completed
         solution.
       </p>
 
       <p>
-        The <code>zip</code> file needs to be submitted to
-        <a href="https://autolab.andrew.cmu.edu/courses/15110q-f20">Autolab</a>.
+        The file with your solution needs to be submitted to
+        <a href="https://autolab.andrew.cmu.edu/courses/15110q-f21">Autolab</a>.
         It will immediately run a series of tests on your code and give you a
         score with some feedback. Make sure to check it! If your code does not
         pass all tests, you can submit it again until the deadline. <span
@@ -427,7 +423,8 @@
       <p>
         The score received on Autolab may not reflect your final score
         for the assignment, since the course staff will check the code
-        for <a href="resources/style.pdf">style</a> and for code similarity between students.
+        for <a href="resources/style.pdf">style</a> and for code similarity between students, to
+        ensure that you are not violating rules of academic integrity.
       </p>
 
     </div>
@@ -449,6 +446,9 @@
       Once installed, you can start the <code>Anaconda-Navigator</code> and launch from there
       the <code>Spyder</code> editor, which you will use to develop and test your python code.
       </p>
+
+      <p>We will use <b>Piazza</b> for communications and Q&A. You will receive an email to
+      register in the <a href="https://piazza.com/class/ksbs0bt7vsg3yo">Piazza course board</a>.
     </div>
     
       
