--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <!-- Makes the schedule table -->
-    <script src="js/mkSchedule.js?<?=time()?"></script>
+    <script>document.write('<script src="js/mkSchedule.js?dev=' + Math.floor(Math.random() * 100) + '"\><\/script>');</script>
+
+    <!--<script src="js/mkSchedule.js?<?=time()?"></script> -->
 
     <style>
     body {
