--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Demetre Devidze (CA)</div>
+            <div class="card-header">TBD (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC/Zoom <br>
@@ -311,7 +311,7 @@
               <ul>
 		<li> Day: xx:00 - yy:30 </li>
               </ul>
-              E-mail: <a href="mailto:ddevidze@andrew.cmu.edu">ddevidze@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:tbd@andrew.cmu.edu">tbd@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
