--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
               Office: ARC/Zoom <br>
               Office hours: <br>
               <ul>
-                <li> Day: xx:00 - yy:00 </li>
+		<li> Sundays: 1:00pm - 2:00pm</li>
+                <li> Tuesdays: 11am - 12:00pm </li>
               </ul>
               E-mail: <a href="mailto: rsulaima@andrew.cmu.edu">rsulaima@andrew.cmu.edu</a>
               </p>
@@ -276,7 +277,8 @@
               Office: ARC/Zoom <br>
               Office hours: <br>
               <ul>
-                <li> Day: xx:00 - yy:00 </li>
+                <li> Tuesdays: 11:00am - 12:00pm </li>
+		<li> Wednesdays: 1:00pm - 2:00pm </li>
               </ul>
               E-mail: <a href="mailto:dazimzha@andrew.cmu.edu">dazimzha@andrew.cmu.edu</a>
               </p>
@@ -294,7 +296,8 @@
               Office: ARC/Zoom <br>
               Office hours: <br>
               <ul>
-		<li> Day: xx:00 - yy:00  </li>
+		<li> Wednesdays: 4:00pm - 5:00pm  </li>
+		<li> Thursdays: 4:00pm - 5:00pm  </li>
               </ul>
               E-mail: <a href="mailto:apacurar@andrew.cmu.edu"> apacurar@andrew.cmu.edu</a>
               </p>
@@ -309,7 +312,8 @@
               Office: ARC/Zoom <br>
               Office hours: <br>
               <ul>
-		<li> Day: xx:00 - yy:30 </li>
+		<li> Sundays: 3:30pm - 4:30pm </li>
+		<li> Tuesdays: 1:00pm - 2:00pm </li>
               </ul>
               E-mail: <a href="mailto:nboualwa@andrew.cmu.edu">nboualwa@andrew.cmu.edu</a>
               </p>
@@ -327,7 +331,8 @@
               Office: ARC/Zoom <br>
               Office hours: <br>
               <ul>
-                <li> Day: xx:00 - yy:00 </li>
+                <li> Mondays: 5:00pm - 6:00pm </li>
+		<li> Wednesdays: 5:00pm - 6:00pm </li>
               </ul>
               E-mail: <a href="mailto:ttanveer@andrew.cmu.edu">ttanveer@andrew.cmu.edu</a>
               </p>
@@ -342,7 +347,8 @@
               Office: ARC/Zoom <br>
               Office hours: <br>
               <ul>
-		<li> Day: xx:00 - yy:00 </li>
+		<li> Mondays: 1:00pm - 2:00pm </li>
+		<li> Thursdays: 8:30pm - 9:30pm </li>
               </ul>
               E-mail: <a href="mailto:zhijiex@andrew.cmu.edu"> zhijiex@andrew.cmu.edu</a>
               </p>
