--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               Office hours: <br>
               <ul>
 		<li> Sundays: 1:00pm - 2:00pm</li>
-                <li> Tuesdays: 11am - 12:00pm </li>
+                <li> Tuesdays: 12:00pm - 1:00pm </li>
               </ul>
               E-mail: <a href="mailto: rsulaima@andrew.cmu.edu">rsulaima@andrew.cmu.edu</a>
               </p>
