--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         In the table below, labs are in blue, exams are in red and the next
         lecture/lab is orange. Green days are in the past, and grey days have no lectures.
       </p>
-      <table class="table" id="scheduleTable">
+      <table class="table table-sm" id="scheduleTable">
       </table>
     </div>
       
