Homework due dates on schedule

--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
               <li> Weekly, except on exam weeks </li>
               <li> Grade divided into: submitted files (75%) + interview (25%) </li>
               <li> <span class="text-danger">To be solved individually </span> (check the course policy on collaboration) </li>
-              <li> <span class="text-danger">Submission of files due on Tuesdays at 6pm</span> </li>
-              <li> <span class="text-danger">Interviews conducted on Wednesdays</span> </li>
+              <li> <span class="text-danger">Submission of files due at 6pm</span> </li>
+              <li> <span class="text-danger">Interviews conducted on the next day</span> </li>
             </ul>
             <li><b>Quizzes: 20%</b> </li>
             <ul>
