--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#policy">Policies</a>
           </li>
-          <!--<li class="nav-item">
-            <a class="nav-link" href="https://piazza.com/class/ksbs0bt7vsg3yo" target="_blank">Piazza <i class="fa fa-external-link"></i></a>
-          </li>-->
+          <li class="nav-item">
+            <a class="nav-link" href="https://piazza.com/cmu/spring2022/15110q" target="_blank">Piazza <i class="fa fa-external-link"></i></a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.gradescope.com/courses/345328" target="_blank">Gradescope <i class="fa fa-external-link"></i></a>
           </li>
@@ -90,7 +90,7 @@
     <br><p>
     <div id="main" class="container section">
       <h1><b>15-110: Principles of Computing (Spring 2022)</b></h1>
-      <img class="img-thumbnail float-right ml-4" style="margin-top: 50px; width:600px" alt="CS quote" src="cover-o.png">
+      <img class="img-thumbnail float-right ml-4" style="margin-top: 50px; width:600px" alt="CS quote" src="python.jpg">
       <p class="text-justify">
       <h2><b>Overview</b></h2>
 
@@ -273,42 +273,44 @@
         </div>
       </div><br>
       
-      <!--<div class="row">
+      <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Andrei-Horia Pacurar (CA)</div>
+            <div class="card-header">Tamta Kapanadze (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC/Zoom <br>
-              Office hours: <br>
+              Office hours: TBD
+              <!--<br>
               <ul>
 		<li> Wednesdays: 4:00pm - 5:00pm  </li>
 		<li> Thursdays: 4:00pm - 5:00pm  </li>
-              </ul>
-              E-mail: <a href="mailto:apacurar@andrew.cmu.edu"> apacurar@andrew.cmu.edu</a>
+              </ul>-->
+              E-mail: <a href="mailto:tkapanad@andrew.cmu.edu">tkapanad@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
-        <div class="col">
+        <!--<div class="col">
           <div class="card border-warning">
             <div class="card-header">Nadim Bou Alwan (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC/Zoom <br>
-              Office hours: <br>
+              Office hours: 
+              <!--<br>
               <ul>
 		<li> Sundays: 3:30pm - 4:30pm </li>
 		<li> Tuesdays: 1:00pm - 2:00pm </li>
-              </ul>
+              </ul>-->
               E-mail: <a href="mailto:nboualwa@andrew.cmu.edu">nboualwa@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
-        </div>
+        </div>-->
       </div><br>
 
-      <div class="row">
+      <!--<div class="row">
         <div class="col">
           <div class="card border-warning">
             <div class="card-header">Temoor Tanveer (CA)</div>
@@ -501,11 +503,13 @@
       <h2><b>Tools</b></h2>
       <p>
       Set up your your programming environment by installing
-      the <a href="https://www.anaconda.com/products/individual">Anaconda</a> distribution (Pyhton 3.8 version):
+      the <a
+      href="https://www.anaconda.com/products/individual">Anaconda</a>
+      distribution (Pyhton 3.9 version):
       <ul>
-	<li> <a href="https://repo.anaconda.com/archive/Anaconda3-2020.11-MacOSX-x86_64.pkg">For MacOS </a></li>
-        <li> <a href="https://repo.anaconda.com/archive/Anaconda3-2020.11-Windows-x86_64.exe">For Windows </a></li>
-        <li> <a href="https://repo.anaconda.com/archive/Anaconda3-2020.11-Linux-x86_64.sh">For Linux </a></li>
+	<li> <a href="https://repo.anaconda.com/archive/Anaconda3-2021.11-MacOSX-x86_64.pkg">For MacOS </a></li>
+        <li> <a href="https://repo.anaconda.com/archive/Anaconda3-2021.11-Windows-x86_64.exe">For Windows </a></li>
+        <li> <a href="https://repo.anaconda.com/archive/Anaconda3-2021.11-Linux-x86_64.sh">For Linux </a></li>
       </ul>
       
       The download is big, so make sure you are at a place with fast and 
