--- a/index.html
+++ b/index.html
@@ -291,23 +291,23 @@
             </div>
           </div>
         </div>
-        <!--<div class="col">
+        <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Nadim Bou Alwan (CA)</div>
+            <div class="card-header">Rama Sulaiman (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC/Zoom <br>
-              Office hours: 
-              <br>
+              Office hours: TBD
+              <!--<br>
               <ul>
 		<li> Sundays: 3:30pm - 4:30pm </li>
 		<li> Tuesdays: 1:00pm - 2:00pm </li>
-              </ul>
-              E-mail: <a href="mailto:nboualwa@andrew.cmu.edu">nboualwa@andrew.cmu.edu</a>
+              </ul>-->
+              E-mail: <a href="mailto:rsulaima@andrew.cmu.edu">rsulaima@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
-        </div>-->
+        </div>
       </div><br>
 
       <!--<div class="row">
