--- a/index.html
+++ b/index.html
@@ -310,24 +310,25 @@
         </div>
       </div><br>
 
-      <!--<div class="row">
+      <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Temoor Tanveer (CA)</div>
+            <div class="card-header">Abrar Abir (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC/Zoom <br>
-              Office hours: <br>
+              Office hours:  TBD
+              <!--<br>
               <ul>
                 <li> Mondays: 5:00pm - 6:00pm </li>
 		<li> Wednesdays: 5:00pm - 6:00pm </li>
-              </ul>
-              E-mail: <a href="mailto:ttanveer@andrew.cmu.edu">ttanveer@andrew.cmu.edu</a>
+              </ul>-->
+              E-mail: <a href="mailto:aabir@andrew.cmu.edu">aabir@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
-	<div class="col">
+	<!--<div class="col">
           <div class="card border-warning">
             <div class="card-header">Zhijie Xu (CA)</div>
             <div class="card-body">
@@ -342,9 +343,8 @@
               </p>
             </div>
           </div>
-        </div>
+        </div>-->
       </div><br>
-    -->
 
       <br>
 
