Adding OH schedule to website

--- a/index.html
+++ b/index.html
@@ -346,6 +346,8 @@
         </div>-->
       </div><br>
 
+      <iframe src="https://calendar.google.com/calendar/embed?src=c_ue0es2cr00r7sh5r6t5gqt8si4%40group.calendar.google.com&ctz=Asia%2FQatar" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
       <br>
 
     <div id="grading" class="container section">
