--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="card-body">
               <p class="card-text">
               Office: 1008 <br>
-              Office hours: TBD <br>
+              Office hours: See calendar below <br>
               E-mail: <a href="mailto:giselle@cmu.edu">giselle@cmu.edu</a>
               </p>
             </div>
@@ -243,12 +243,7 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC/Zoom <br>
-              Office hours: TBD
-              <!--<br>
-              <ul>
-		<li> Sundays: 1:00pm - 2:00pm</li>
-                <li> Tuesdays: 12:00pm - 1:00pm </li>
-              </ul>-->
+              Office hours: See calendar below <br>
               E-mail: <a href="mailto:walkhenj@andrew.cmu.edu">walkhenj@andrew.cmu.edu</a>
               </p>
             </div>
@@ -260,12 +255,7 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC/Zoom <br>
-              Office hours: TBD
-              <!--<br>
-              <ul>
-                <li> Tuesdays: 1:00am - 2:00pm </li>
-		<li> Wednesdays: 1:00pm - 2:00pm </li>
-              </ul>-->
+              Office hours: See calendar below <br>
               E-mail: <a href="mailto:sabdalla@andrew.cmu.edu">sabdalla@andrew.cmu.edu</a>
               </p>
             </div>
@@ -280,12 +270,7 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC/Zoom <br>
-              Office hours: TBD
-              <!--<br>
-              <ul>
-		<li> Wednesdays: 4:00pm - 5:00pm  </li>
-		<li> Thursdays: 4:00pm - 5:00pm  </li>
-              </ul>-->
+              Office hours: See calendar below <br>
               E-mail: <a href="mailto:tkapanad@andrew.cmu.edu">tkapanad@andrew.cmu.edu</a>
               </p>
             </div>
@@ -297,12 +282,7 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC/Zoom <br>
-              Office hours: TBD
-              <!--<br>
-              <ul>
-		<li> Sundays: 3:30pm - 4:30pm </li>
-		<li> Tuesdays: 1:00pm - 2:00pm </li>
-              </ul>-->
+              Office hours: See calendar below <br>
               E-mail: <a href="mailto:rsulaima@andrew.cmu.edu">rsulaima@andrew.cmu.edu</a>
               </p>
             </div>
@@ -317,33 +297,24 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC/Zoom <br>
-              Office hours:  TBD
-              <!--<br>
-              <ul>
-                <li> Mondays: 5:00pm - 6:00pm </li>
-		<li> Wednesdays: 5:00pm - 6:00pm </li>
-              </ul>-->
+              Office hours: See calendar below <br>
               E-mail: <a href="mailto:aabir@andrew.cmu.edu">aabir@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
-	<!--<div class="col">
+	<div class="col">
           <div class="card border-warning">
-            <div class="card-header">Zhijie Xu (CA)</div>
+            <div class="card-header">Aya Al Sabahi (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC/Zoom <br>
-              Office hours: <br>
-              <ul>
-		<li> Mondays: 1:00pm - 2:00pm </li>
-		<li> Thursdays: 8:30pm - 9:30pm </li>
-              </ul>
-              E-mail: <a href="mailto:zhijiex@andrew.cmu.edu"> zhijiex@andrew.cmu.edu</a>
+              Office hours: See calendar below <br>
+              E-mail: <a href="mailto:asabahi@andrew.cmu.edu">asabahi@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
-        </div>-->
+        </div>
       </div><br>
 
       <iframe src="https://calendar.google.com/calendar/embed?src=c_ue0es2cr00r7sh5r6t5gqt8si4%40group.calendar.google.com&ctz=Asia%2FQatar" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
