Instructions for interviews

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             <a class="nav-link" href="#assignments">Assignments</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#interviews">Interviews</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#tools">Tools</a>
           </li>
           <li class="nav-item">
@@ -181,7 +184,7 @@
           <tr>
             <td> Sundays and Tuesdays </td>
             <td> 14:30 to 15:45 </td>
-            <td> Room TBD </td>
+            <td> Room 2152 </td>
             <td> <span class="badge badge-secondary">lectures</span> </td>
           </tr>
           <tr>
@@ -397,8 +400,10 @@
         between students, to ensure that you are not violating rules of 
         academic integrity.
       </p>
+    </div>
 
-      <h3>Interviews</h3>
+    <div id="interviews" class="container section">
+      <h2>Interviews</h2>
 
       <p>
       After submitting the homework, the course staff will conduct interviews
@@ -438,6 +443,7 @@
       <ul>
         <li> You cannot consult extra material, it is only you and your brain. </li>
         <li> You can ask clarification questions, but we might not answer if they give away the solution. </li>
+        <li> If your interview is online, you must share your desktop and have your writing or programming software ready in advance. </li>
         <!-- Uncomment if interviews are online 
         <li> You should share your desktop for coding tasks. Written tasks can be solved on a digital or physical white paper. </li>
         <li> You should have lab handout and programming/writing environment ready before starting the interview. </li>
