--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <td> Thursdays </td>
             <td> 14:30 to 15:45 </td>
             <td> Room TBD </td>
-            <td> <span class="badge badge-secondary">labs + quizzes</span> </td>
+            <td> <span class="badge badge-secondary">labs</span> </td>
           </tr>
         </tbody>
       </table>
@@ -328,7 +328,7 @@
       <h2><b>Grading</b></h2>
         
           <ul>
-            <li><b>Homeworks + interview: 20%</b> </li>
+            <li><b>Homeworks + interview: 25%</b> </li>
             <ul>
               <li> Weekly, except on exam weeks </li>
               <li> Grade divided into: submitted files (75%) + interview (25%) </li>
@@ -336,20 +336,19 @@
               <li> <span class="text-danger">Submission of files due at 6pm</span> </li>
               <li> <span class="text-danger">Interviews conducted on the next day</span> </li>
             </ul>
-            <li><b>Quizzes: 20%</b> </li>
+            <!--<li><b>Quizzes: 20%</b> </li>
             <ul>
               <li> Weekly, except on exam weeks </li>
               <li> Administered at the beginning of the lecture or lab </li>
               <li> Individual and closed book, written  </li>
               <li> Good practice for exams! </li>
-            </ul>
-            <li><b>Three midterms: 30%</b> (10% each) </li>
+            </ul>-->
+            <li><b>Four exam interviews: 60%</b> (15% each) </li>
             <ul>
-              <li> Administered during normal class hours </li>
-              <li> Individual and closed book, written </li>
+              <li> Individual and without consultation </li>
             </ul>
-            <li><b>Project: 10%</b> </li>
-            <li><b>Final exam: 20%</b></li>
+            <li><b>Project: 15%</b> </li>
+            <!--<li><b>Final exam: 20%</b></li>-->
           </ul>     
     </div>
 
@@ -406,14 +405,28 @@
       <h2>Interviews</h2>
 
       <p>
-      After submitting the homework, the course staff will conduct interviews
-      to evaluate your understanding of the solutions. During the interview,
-      one of the homework tasks will be randomly chosen and you will have to 
-      solve it live. Each interview takes at most 15 minutes.
+      Most of the assessment for this course is done through coding
+      interviews.
+      
+      <ul>
+        <li> <b>Homework interviews:</b> 
+        After submitting the homework, the course staff will conduct interviews
+        to evaluate your understanding of the solutions. During the interview,
+        one of the homework tasks will be randomly chosen and you will have to 
+        solve it live. Each interview takes at most 15 minutes.
+        </li>
+
+        <li> <b>Exam interviews:</b>
+        Each exam is a 20 to 30 minute interview, where you will need
+        to solve coding tasks live. You will not have seen the tasks
+        before, but they might be variations or build upon exercises
+        seen in lecture and lab. 
+        </li>
+      </ul>
       </p>
 
       <p>
-      The interview is evaluated from 1 to 5 as follows:
+      Each interview question is evaluated from 1 to 5 as follows:
 
       <ol>
       <li> Incorrect answer, explanation does not show understanding of what is going on. </li>
@@ -443,7 +456,13 @@
       <ul>
         <li> You cannot consult extra material, it is only you and your brain. </li>
         <li> You can ask clarification questions, but we might not answer if they give away the solution. </li>
-        <li> If your interview is online, you must share your desktop and have your writing or programming software ready in advance. </li>
+        <li> If your interview is online: </li>
+          <ul>
+            <li> you must share your desktop and have your writing or
+            programming software ready in advance; </li>
+            <li> unless you have a video waiver, you must have your
+            camera on. </li>
+          </ul>
         <!-- Uncomment if interviews are online 
         <li> You should share your desktop for coding tasks. Written tasks can be solved on a digital or physical white paper. </li>
         <li> You should have lab handout and programming/writing environment ready before starting the interview. </li>
