--- a/index.html
+++ b/index.html
@@ -359,8 +359,7 @@
       <p>
         The writeup and starter files for each homework are in a <code>zip</code>
         file which can be downloaded from the schedule above.
-        Uncompressing this file will create the directory
-        <code>&lt;asgn&gt;-handout</code> with the starter code and <code>pdf</code>
+        This <code>zip</code> file contains the starter code and <code>pdf</code>
         file with instructions.
         <span class="text-danger"><b>If you need to download these files again, be
         careful not to overwrite your work!</b></span>
