Adding lab room and removing quizzes

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <tr>
             <td> Thursdays </td>
             <td> 14:30 to 15:45 </td>
-            <td> Room TBD </td>
+            <td> Room 1185 </td>
             <td> <span class="badge badge-secondary">labs</span> </td>
           </tr>
         </tbody>
