--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
     <div id="schedule" class="container section">
       <h2><b>Schedule (Subject to changes)</b></h2>
       <p>
-        In the table below, labs are in blue, exams are in red and the next
-        lecture/lab is orange. Green days are in the past, and grey days have no lectures.
+        <!-- In the table below, labs are in blue, exams are in red and the next
+        lecture/lab is orange. Green days are in the past, and grey days have no lectures. -->
       </p>
       <table class="table table-sm" id="scheduleTable">
       </table>
