--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <li><b>Homeworks + Interviews: 18%</b> </li>
             <ul>
               <li> Weekly, except on exam weeks </li>
-              <li> Grade divided into: submitted files (8%) + interview (10%) </li>
+              <li> Grade divided into: submitted and autograded files (8%) + interview (10%) </li>
               <li> <span class="text-danger">To be solved individually </span> (check the course policy on collaboration) </li>
               <li> <span class="text-danger">Submission of files on Autolab due on Sundays, at 9am</span> </li>
               <li> <span class="text-danger">Interviews conducted by CAs during the week of the submission</span> </li>
