--- a/index.html
+++ b/index.html
@@ -484,7 +484,8 @@
 
       <p>
         The text with the questions of each Quiz will be available on paper sheets distributed at the
-        beginning of the Quiz assignment in the classroom. </p>
+        beginning of the Quiz assignment in the classroom. Each quiz will address questions about the
+        the topics discussed during the week. </p>
 	
       <p><span class="text-danger"><b>Quizzes must be answered exclusively using pen and paper!
 	You are not allowed to use devices, computers, books, notes, ... </b></span></p>
