--- a/index.html
+++ b/index.html
@@ -381,8 +381,9 @@
       <h3>Homework Grading</h3>
 
       <p>
-	Each homework will be graded in two parts, one based on the autograding, and one based on
-	homework interviews carried out by the Course Assistants. All the autograded scores will
+	<b>Each homework will be graded in two parts,</b> one based on the autograding, and one based on
+	<span class="text-danger"><b>homework interviews carried out by the Course Assistants during
+	the weekly meetings scheduled with the students.</b></span> All the autograded scores will
 	weight for the 8% of the final grade, while the scores from the interviews will weight for
 	the 10% of the final grade. The modality for grading the two parts is discussed below.</p>
 	
@@ -415,10 +416,11 @@
       <h3>Homework Interviews</h3>
 
       <p>
-        After submitting the homework, the course staff will conduct interviews
-        to evaluate your understanding of the solutions. During the interview,
-        one of the homework tasks will be randomly chosen and you will have to 
-        solve it live. Each interview will take at most 15 minutes.</p>
+        After submitting the homework, the course staff will conduct interviews to evaluate your
+        understanding of the solutions. The interview will be carried out during the (mandatory!)
+        weekly meeting that thet student will have scheduled with her/his CA Tutor. During the
+        interview, one of the homework tasks will be randomly chosen and you will have to solve it
+        live. Each interview will take at most 15 minutes.</p>
 
       <p>
 	The rubric for evaluating the interviews with a grade score between 0 and 100 is as follows:
@@ -433,7 +435,11 @@
       <li> Code looks good, minor issues, little misunderstandings in the explanation: 60 &lt; score &le; 80 </li>
       <li> Code is basically correct, clear and didactic explanation: 80 &lt; score &le; 100   </li>
       </ol>
-      
+      </p>
+
+      <p>
+      <span class="text-danger"><b>If the student doesn't meet with the tutoring CA for the
+      interview during the week, the homework grade for the interview part will be 0.</b></span>
       </p>
 
       <p>
