--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <tr>
             <td> Sundays and Tuesdays </td>
             <td> 14:30 to 15:45 </td>
-            <td> Room TBD </td>
+            <td> Room 1202 </td>
             <td> <span class="badge badge-secondary">lectures</span> </td>
           </tr>
           <tr>
