--- a/index.html
+++ b/index.html
@@ -229,13 +229,14 @@
           </div>
         </div>
 
+
         <div class="col">
           <div class="card border-warning">
             <div class="card-header">Madhavi Ganapathiraju (Teacher)</div>
             <div class="card-body">
               <p class="card-text">
               Office: 1005 <br>
-              Office hours: See calendar below <br>
+              Office hours: See calendar below or book appointment with link posted on Piazza <br>
               E-mail: <a href="mailto:gvns@andrew.cmu.edu">gvns@andrew.cmu.edu</a>
               </p>
             </div>
@@ -247,51 +248,52 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header"> TBD (CA)</div>
+            <div class="card-header"> Aboud Abdelrahman Abdalla (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: ARC/Zoom <br>
+              Office: ARC <br>
               Office hours: See calendar below <br>
-              E-mail: <a href=""></a>
+              E-mail: <a href="mailto:aabdalla@andrew.cmu.edu">aabdalla@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header"> TBD (CA)</div>
+            <div class="card-header"> Danagul Azimzhanova (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: ARC/Zoom <br>
+              Office: ARC<br>
               Office hours: See calendar below <br>
-              E-mail: <a href=""></a>
+              E-mail: <a href="mailto:dazimzha@andrew.cmu.edu">dazimzha@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
       </div><br>
-      
+
+    
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Eric Jingxiang Gao (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: ARC/Zoom <br>
+              Office: ARC<br>
               Office hours: See calendar below <br>
-              E-mail: <a href=""></a>
+              E-mail: <a href="mailto:ericgao@cmu.edu">ericgao@cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Lorenzo Yunze Xiao (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: ARC/Zoom <br>
+              Office: ARC<br>
               Office hours: See calendar below <br>
-              E-mail: <a href=""></a>
+              E-mail: <a href="mailto:yunzex@andrew.cmu.edu">yunzex@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
@@ -301,32 +303,47 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Mohamed Mohamed (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: ARC/Zoom <br>
+              Office: ARC<br>
               Office hours: See calendar below <br>
-              E-mail: <a href=""></a>
+              E-mail: <a href="mailto:msmohame@andrew.cmu.edu">msmohame@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
-	<div class="col">
+        <div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Rama Sulaiman (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: ARC/Zoom <br>
+              Office: ARC<br>
               Office hours: See calendar below <br>
-              E-mail: <a href=""></a>
+              E-mail: <a href="mailto:rsulaima@andrew.cmu.edu">rsulaima@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
       </div><br>
-
+      <div class="row">
+        <div class="col">
+          <div class="card border-warning">
+            <div class="card-header">Reem Kensouh (CA)</div>
+            <div class="card-body">
+              <p class="card-text">
+              Office: ARC<br>
+              Office hours: See calendar below <br>
+              E-mail: <a href="mailto:rkensouh@andrew.cmu.edu">rkensouh@andrew.cmu.edu</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div><br>
+      <iframe src="https://calendar.google.com/calendar/embed?src=c_f8f9766f6e417dafc5df46ae6e182eb20ee129acf8126745ccf90723e11f4401%40group.calendar.google.com&ctz=Asia%2FQatar" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+      <!--
       <iframe src="https://calendar.google.com/calendar/embed?src=c_ue0es2cr00r7sh5r6t5gqt8si4%40group.calendar.google.com&ctz=Asia%2FQatar" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-
+      -->
       <br>
 
     <div id="grading" class="container section">
