--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
           <tr>
             <td> Mondays and Wednesdays </td>
             <td> 10:00 to 11:15 </td>
-            <td> Room TBA </td>
+            <td> Room 1199 </td>
             <td> <span class="badge badge-secondary">lectures</span> </td>
           </tr>
           <tr>
             <td> Thursdays </td>
             <td> 10:00 to 11:15 </td>
-            <td> Room TBA </td>
+            <td> Room 2035 </td>
             <td> <span class="badge badge-secondary">labs / quizzes</span> </td>
           </tr>
         </tbody>
