Adding Zuha to the website

--- a/index.html
+++ b/index.html
@@ -236,6 +236,18 @@
             </div>
           </div>
         </div>
+        <div class="col">
+          <div class="card border-warning">
+            <div class="card-header">Fathimath Zuha Maksood (Educational Support Specialist)</div>
+            <div class="card-body">
+              <p class="card-text">
+              Office: 1079 <br>
+              Office hours: by appointment <br>
+              E-mail: <a href="mailto:fmaksood@andrew.cmu.edu">fmaksood@andrew.cmu.edu</a>
+              </p>
+            </div>
+          </div>
+        </div>
       </div><br>
 
       
